fix: table horizontal scroll on mobile (#600)
* fix: table horizontal scroll on mobile

* fix: overflow-x and media querie changed

* fix: css conditinal to excluede native tables and new sugestion for cell table width

* fix: class changed

--- a/theme/ItaliaTheme/_main.scss
+++ b/theme/ItaliaTheme/_main.scss
@@ -260,3 +260,14 @@ iframe {
     line-height: 1;
   }
 }
+
+//table overflow mobile
+@media (max-width: #{map-get($grid-breakpoints, lg)}) {
+  .public-ui table.ui.table {
+    display: block;
+    overflow: auto;
+    th {
+      white-space: nowrap;
+    }
+  }
+}
